--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  #拍照和选择照片的插件
+  image_picker: ^0.6.0+8
+  #请求方法
+  dio: 2.1.5
+  flutter_screenutil: ^0.5.0
 
 dev_dependencies:
   flutter_test:
